--- a/index.html
+++ b/index.html
@@ -30,9 +30,69 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div id="8" class="time-block row">
+        <div class="hour col-md-1">8:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="9" class="time-block row">
+        <div class="hour col-md-1">9:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="10" class="time-block row">
+        <div class="hour col-md-1">10:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="11" class="time-block row">
+        <div class="hour col-md-1">11:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="12" class="time-block row">
+        <div class="hour col-md-1">12:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="13" class="time-block row">
+        <div class="hour col-md-1">13:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="14" class="time-block row">
+        <div class="hour col-md-1">14:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="15" class="time-block row">
+        <div class="hour col-md-1">15:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="16" class="time-block row">
+        <div class="hour col-md-1">16:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      
+      <div id="17" class="time-block row">
+        <div class="hour col-md-1">17:00</div>
+        <textarea class="description col-md-10"></textarea>
+        <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
