--- a/index.html
+++ b/index.html
@@ -31,61 +31,61 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div id="8" class="time-block row">
-        <div class="hour col-md-1">8:00</div>
+        <div class="hour col-md-1">8:00 AM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="9" class="time-block row">
-        <div class="hour col-md-1">9:00</div>
+        <div class="hour col-md-1">9:00 AM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="10" class="time-block row">
-        <div class="hour col-md-1">10:00</div>
+        <div class="hour col-md-1">10:00 AM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="11" class="time-block row">
-        <div class="hour col-md-1">11:00</div>
+        <div class="hour col-md-1">11:00 AM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="12" class="time-block row">
-        <div class="hour col-md-1">12:00</div>
+        <div class="hour col-md-1">12:00 PM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="13" class="time-block row">
-        <div class="hour col-md-1">13:00</div>
+        <div class="hour col-md-1">1:00 PM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="14" class="time-block row">
-        <div class="hour col-md-1">14:00</div>
+        <div class="hour col-md-1">2:00 PM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="15" class="time-block row">
-        <div class="hour col-md-1">15:00</div>
+        <div class="hour col-md-1">3:00 PM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="16" class="time-block row">
-        <div class="hour col-md-1">16:00</div>
+        <div class="hour col-md-1">4:00 PM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
       
       <div id="17" class="time-block row">
-        <div class="hour col-md-1">17:00</div>
+        <div class="hour col-md-1">5:00 PM</div>
         <textarea class="description col-md-10"></textarea>
         <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
